--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -145,3 +145,109 @@
         transform: translate(-0.1vw, -0.1vw);
     }
 }
+
+.vapor-sunset-container {
+    margin: auto;
+    padding: 3vw;
+    width: 73%;
+    background: linear-gradient(
+        0deg,
+        #DD3344 0%,
+        #EE4466 15%,
+        #442299 50%,
+        #2b1165 100%
+    );
+}
+
+.vapor-sunset {
+    margin: auto;
+    width: 40vw;
+    height: 40vw;
+    border-radius: 20vw;
+    position: relative;
+    overflow: hidden;
+}
+
+.vapor-sunset::before {
+    content: "";
+    display: block;
+    top: 0;
+    height: 50%;
+    background: linear-gradient(
+        0deg,
+        #2b1165 0%,
+        #441166 15%,
+        #442299 51%,
+        #EE4466 100%
+    );
+    background-size: 40vw 40vw;
+    width: 100%;
+}
+
+.vapor-sunset::after {
+    content: "";
+    display: block;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(
+        0deg,
+        #EE3355 0%,
+        #EE3355 20%,
+        #442299 50%,
+        #442299 100%
+    );
+    background-size: 40vw 40vw;
+    background-position: bottom center;
+    clip-path: polygon(
+        0 -20vw, 100% -20vw, 100% -20.5vw, 0 -20.5vw,
+        0 -18vw, 100% -18vw, 100% -18.5vw, 0 -18.5vw,
+        0 -16vw, 100% -16vw, 100% -16.5vw, 0 -16.5vw,
+        0 -14vw, 100% -14vw, 100% -14.5vw, 0 -14.5vw,
+        0 -12vw, 100% -12vw, 100% -12.5vw, 0 -12.5vw,
+        0 -10vw, 100% -10vw, 100% -10.5vw, 0 -10.5vw,
+        0 -8vw, 100% -8vw, 100% -8.5vw, 0 -8.5vw,
+        0 -6vw, 100% -6vw, 100% -6.5vw, 0 -6.5vw,
+        0 -4vw, 100% -4vw, 100% -4.5vw, 0 -4.5vw,
+        0 -2vw, 100% -2vw, 100% -2.5vw, 0 -2.5vw,
+        0 0, 100% 0, 100% -.5vw, 0 -.5vw,
+        0 0, 100% 0, 100% .5vw, 0 .5vw,
+        0 2vw, 100% 2vw, 100% 2.5vw, 0 2.5vw,
+        0 4vw, 100% 4vw, 100% 4.5vw, 0 4.5vw,
+        0 6vw, 100% 6vw, 100% 6.5vw, 0 6.5vw,
+        0 8vw, 100% 8vw, 100% 8.5vw, 0 8.5vw,
+        0 10vw, 100% 10vw, 100% 10.5vw, 0 10.5vw,
+        0 12vw, 100% 12vw, 100% 12.5vw, 0 12.5vw,
+        0 14vw, 100% 14vw, 100% 14.5vw, 0 14.5vw,
+        0 16vw, 100% 16vw, 100% 16.5vw, 0 16.5vw,
+        0 18vw, 100% 18vw, 100% 18.5vw, 0 18.5vw);
+    animation: vapor-sunset 25s cubic-bezier(0.25, 0.30, 0.20, 0.25) infinite;
+}
+   
+@keyframes vapor-sunset {
+    to {
+        clip-path: polygon(
+            0 0, 100% 0, 100% .5vw, 0 .5vw,
+            0 2vw, 100% 2vw, 100% 2.5vw, 0 2.5vw,
+            0 4vw, 100% 4vw, 100% 4.5vw, 0 4.5vw,
+            0 6vw, 100% 6vw, 100% 6.5vw, 0 6.5vw,
+            0 8vw, 100% 8vw, 100% 8.5vw, 0 8.5vw,
+            0 10vw, 100% 10vw, 100% 10.5vw, 0 10.5vw,
+            0 12vw, 100% 12vw, 100% 12.5vw, 0 12.5vw,
+            0 14vw, 100% 14vw, 100% 14.5vw, 0 14.5vw,
+            0 16vw, 100% 16vw, 100% 16.5vw, 0 16.5vw,
+            0 18vw, 100% 18vw, 100% 18.5vw, 0 18.5vw,
+            0 20vw, 100% 20vw, 100% 20vw, 0 20vw,
+            0 22vw, 100% 22vw, 100% 22.5vw, 0 22.5vw,
+            0 24vw, 100% 24vw, 100% 24.5vw, 0 24.5vw,
+            0 26vw, 100% 26vw, 100% 26.5vw, 0 26.5vw,
+            0 28vw, 100% 28vw, 100% 28.5vw, 0 28.5vw,
+            0 30vw, 100% 30vw, 100% 30.5vw, 0 30.5vw,
+            0 32vw, 100% 32vw, 100% 32.5vw, 0 32.5vw,
+            0 34vw, 100% 34vw, 100% 34.5vw, 0 34.5vw,
+            0 36vw, 100% 36vw, 100% 36.5vw, 0 36.5vw,
+            0 38vw, 100% 38vw, 100% 38.5vw, 0 38.5vw,
+            0 40vw, 100% 40vw, 100% 40.5vw, 0 40.5vw
+        );
+    }
+}
