:lipstick: Consistency in capitalization of color codes

--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -155,7 +155,7 @@
         #DD3344 0%,
         #EE4466 15%,
         #442299 50%,
-        #2b1165 100%
+        #2B1165 100%
     );
 }
 
@@ -175,7 +175,7 @@
     height: 50%;
     background: linear-gradient(
         0deg,
-        #2b1165 0%,
+        #2B1165 0%,
         #441166 15%,
         #442299 51%,
         #EE4466 100%
