--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -152,10 +152,10 @@
     width: 73%;
     background: linear-gradient(
         0deg,
-        #DD3344 0%,
+        #EE3355 0%,
         #EE4466 15%,
         #442299 50%,
-        #2B1165 100%
+        #221166 100%
     );
 }
 
@@ -175,7 +175,7 @@
     height: 50%;
     background: linear-gradient(
         0deg,
-        #2B1165 0%,
+        #221166 0%,
         #441166 15%,
         #442299 51%,
         #EE4466 100%
@@ -193,9 +193,10 @@
     background: linear-gradient(
         0deg,
         #EE3355 0%,
-        #EE3355 20%,
-        #442299 50%,
-        #442299 100%
+        #EE3355 12.5%,
+        #5533AA 30%,
+        #442299 49%,
+        #EE3355 100%
     );
     background-size: 40vw 40vw;
     background-position: bottom center;
@@ -249,5 +250,129 @@
             0 38vw, 100% 38vw, 100% 38.5vw, 0 38.5vw,
             0 40vw, 100% 40vw, 100% 40.5vw, 0 40.5vw
         );
+    }
+}
+
+.crt-container {
+    margin: auto;
+    padding: 3vw;
+    width: 73%;
+    background-color: #451A1A;
+}
+
+.crt {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.crt::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(50, 50, 50, 0) 50%, 
+                                rgba(0, 0, 0, 0.1) 50%), 
+                linear-gradient(90deg, 
+                              rgba(255, 0, 0, 0.075), 
+                              rgba(0, 255, 0, 0.025), 
+                              rgba(0, 0, 255, 0.075));
+    background-size: 100% 2px, 1px 100%;
+    pointer-events: none;
+    border-radius: 2vw;
+}
+
+.crt::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(50, 50, 50, 0.075);
+    pointer-events: none;
+    animation: screen 52ms infinite;
+    border-radius: 2vw;
+}
+
+.crt-p {
+    padding: 2vw 0 20vw 2vw;
+    background-color: white;
+    text-align: left;
+    font-family: monospace;
+    font-size: 2vw;
+    border-radius: 2vw;
+    box-shadow: inset 0 0 10vw #555555,
+                inset 0 0 1.5vw #111111;
+    text-shadow: 0 0 0.2vw;
+}
+
+@keyframes screen {
+    0% {
+        opacity: 0.45;
+    }
+    5% {
+        opacity: 0.15;
+    }
+    10% {
+        opacity: 0.25;
+    }
+    15% {
+        opacity: 0.75;
+    }
+    20% {
+        opacity: 0.15;
+    }
+    25% {
+        opacity: 0.45;
+    }
+    30% {
+        opacity: 0.25;
+    }
+    35% {
+        opacity: 0.75;
+    }
+    40% {
+        opacity: 0.55;
+    }
+    45% {
+        opacity: 0.25;
+    }
+    50% {
+        opacity: 0.85;
+    }
+    55% {
+        opacity: 0.35;
+    }
+    60% {
+        opacity: 0.65;
+    }
+    65% {
+        opacity: 0.15;
+    }
+    70% {
+        opacity: 0.45;
+    }
+    75% {
+        opacity: 0.35;
+    }
+    80% {
+        opacity: 0.75;
+    }
+    85% {
+        opacity: 0.65;
+    }
+    90% {
+        opacity: 0.15;
+    }
+    95% {
+        opacity: 0.35;
+    }
+    100% {
+        opacity: 0.65;
     }
 }
